feat(contact): implement multi-location support and enhance map

--- a/src/locales/langs/ar/common.json
+++ b/src/locales/langs/ar/common.json
@@ -62,5 +62,28 @@
       "join": "الوصول إلى الحوكمة",
       "data": "بيانات البلوكشين"
     }
+  },
+  "contact": {
+    "hero": {
+      "title_1": "أين تجدنا؟",
+      "title_2": "",
+      "locations": {
+        "bali": "بالي، إندونيسيا",
+        "london": "لندن، المملكة المتحدة",
+        "prague": "براغ، التشيك",
+        "moscow": "موسكو، روسيا"
+      }
+    },
+    "form": {
+      "title": "الاتصال المؤسسي",
+      "subtitle": "نحن متاحون للحوارات الاستراتيجية واستفسارات الحوكمة.",
+      "fields": {
+        "name": "الاسم الكامل",
+        "email": "البريد الإلكتروني المؤسسي",
+        "subject": "الموضوع / طبيعة الاستفسار",
+        "message": "رسالتك...",
+        "submit": "إرسال الطلب"
+      }
+    }
   }
 }
