--- a/src/locales/langs/ru/common.json
+++ b/src/locales/langs/ru/common.json
@@ -62,5 +62,38 @@
       "join": "Доступ к Управлению",
       "data": "Данные в Сети"
     }
+  },
+  "contact": {
+    "hero": {
+      "title_1": "Где нас",
+      "title_2": "найти?",
+      "locations": {
+        "bali": "Бали, Индонезия",
+        "london": "Лондон, Великобритания",
+        "prague": "Прага, Чехия",
+        "moscow": "Москва, Россия"
+      },
+      "addresses": {
+        "bali": "Адрес на Бали",
+        "london": "Адрес в Лондоне",
+        "prague": "Адрес в Праге",
+        "moscow": "Адрес в Москве"
+      }
+    },
+    "form": {
+      "title": "Институциональная связь",
+      "subtitle": "Мы открыты для стратегического диалога и вопросов управления.",
+      "fields": {
+        "name": "Полное имя",
+        "email": "Корпоративная почта",
+        "subject": "Тема / Характер запроса",
+        "message": "Ваше сообщение...",
+        "submit": "Отправить запрос",
+        "address": "Адрес"
+      }
+    },
+    "map": {
+      "title": "Наш адрес"
+    }
   }
 }
