feat: Implementa a seção de preços com internacionalização

--- a/src/locales/langs/ar/common.json
+++ b/src/locales/langs/ar/common.json
@@ -85,5 +85,17 @@
         "submit": "إرسال الطلب"
       }
     }
+  },
+  "faq": {
+    "items": {
+      "q1": { "question": "ما الذي يحدد ASPPIBRA-DAO وما هو أساسها القانوني؟", "answer": "هي جمعية مدنية غير ربحية تأسست بموجب المادة 44 من القانون المدني[cite: 6]. نعتمد اسم ASPPIBRA-DAO للحوكمة الرقمية وتقنيات البلوكشين[cite: 6]." },
+      "q2": { "question": "كيف تيسر الجمعية تسوية الأراضي (REURB)؟", "answer": "نعمل كذراع فني بموجب القانون 13.465/2017 لضمان السيادة القانونية للحيازة والوظيفة الاجتماعية للملكية." },
+      "q3": { "question": "هل وثيقة CAD نوع من الاستثمار أو الأصول المالية؟", "answer": "لا. وفقاً للمادة 6-أ، هي سجلات عضوية مشفرة غير قابلة للتحويل[cite: 11]. ولا تعتبر أوراقاً مالية أو أصولاً مالية."
+      },
+      "q4": { "question": "كيف يضمن النظام نزاهة المعلومات العقارية؟", "answer": "نستخدم البلوكشين كإثبات تشفيري للمشاركة، مع بروتوكولات حماية البيانات، لضمان سجلات غير قابلة للتغيير وقابلة للتدقيق[cite: 11, 15]." },
+      "q5": { "question": "كيف يتوافق المشروع مع الاستدامة (SDG 2030)؟", "answer": "نسترشد بالتنمية المستدامة والحفاظ على البيئة، بما يتماشى مع أهداف الأمم المتحدة للتنمية المستدامة[cite: 9, 10]." },
+      "q6": { "question": "ما هي آليات الرقابة في الـ DAO؟", "answer": "نحافظ على برنامج امتثال مستمر ورقابة من مجلس مالي مستقل، مع محاسبة سنوية معتمدة[cite: 27, 30]." },
+      "q7": { "question": "كيف تدمج الجمعية التقنيات الناشئة في الخدمات العامة؟", "answer": "نتبع قانون الحكومة الرقمية لرقمنة الخدمات وتطبيق الذكاء الاصطناعي والبلوكشين في المصالح العامة[cite: 10]." }
+    }
   }
 }
