--- a/src/locales/langs/cn/common.json
+++ b/src/locales/langs/cn/common.json
@@ -95,5 +95,26 @@
     "map": {
       "title": "我们的地址"
     }
+  },
+  "faq": {
+    "items": {
+      "q1": { "question": "ASPPIBRA-DAO 的定义及法律依据是什么？", "answer": "它是根据民法典第 44 条成立的非营利民事协会 [cite: 6]。采用 ASPPIBRA-DAO 名称进行数字治理及区块链运营 [cite: 6]。" },
+      "q2": { "question": "协会如何实现土地合法化 (REURB)？", "answer": "我们作为第 13.465/2017 号法律下的专业技术部门，确保占有的法律主权及财产社会功能 。" },
+      "q3": { "question": "CAD 凭证是否属于投资或金融资产？", "answer": "不。根据第 6-A 条，CAD 是不可转让的加密成员记录 [cite: 11]。它不属于证券或金融资产 。" },
+      "q4": { "question": "生态系统如何确保资产信息的完整性？", "answer": "我们使用区块链作为参与的加密证明，结合数据保护协议 (LGPD)，确保记录不可篡改且可审计 [cite: 11, 15]。" },
+      "q5": { "question": "项目如何与可持续发展 (SDG 2030) 保持一致？", "answer": "我们的行动以可持续发展和环境保护为准则，与联合国可持续发展目标挂钩 [cite: 9, 10]。" },
+      "q6": { "question": "DAO 的监督机制是什么？", "answer": "我们维持持续的合规计划，由独立监事会负责，并由会员大会通过年度账目 [cite: 27, 30]。" },
+      "q7": { "question": "协会如何将新兴技术整合至公共服务？", "answer": "我们遵循《数字政府法》实现服务数字化，应用人工智能和区块链优化公共事务 [cite: 10]。" }
+    },
+    "form": {
+      "title": "没有找到合适的帮助吗？",
+      "fields": {
+        "name": "姓名",
+        "email": "电子邮件",
+        "subject": "主题",
+        "message": "在此输入您的消息。",
+        "submit": "提交"
+      }
+    }
   }
 }
