--- a/src/locales/langs/ru/common.json
+++ b/src/locales/langs/ru/common.json
@@ -95,5 +95,27 @@
     "map": {
       "title": "Наш адрес"
     }
+  },
+  "faq": {
+    "items": {
+      "q1": { "question": "Что такое ASPPIBRA-DAO и какова ее правовая база?", "answer": "Это некоммерческая гражданская ассоциация согласно ст. 44 ГК[cite: 6]. Название ASPPIBRA-DAO используется для блокчейн-управления[cite: 6]." },
+      "q2": { "question": "Как ассоциация обеспечивает легализацию земель (REURB)?", "answer": "Мы работаем согласно Закону № 13.465/2017, обеспечивая юридический суверенитет владения и социальную функцию собственности." },
+      "q3": { "question": "Являются ли учетные данные CAD инвестицией?", "answer": "Нет. Согласно ст. 6-А, CAD — это непередаваемые криптографические записи о членстве[cite: 11]. Они не являются финансовыми активами."
+      },
+      "q4": { "question": "Как обеспечивается целостность информации?", "answer": "Мы используем блокчейн как доказательство участия вместе с протоколами защиты данных, обеспечивая неизменяемость записей[cite: 11, 15]." },
+      "q5": { "question": "Как проект связан с устойчивым развитием (ЦУР 2030)?", "answer": "Наша деятельность основана на устойчивом развитии и охране природы, соответствуя целям ООН[cite: 9, 10]." },
+      "q6": { "question": "Каковы механизмы контроля в DAO?", "answer": "Мы ведем программу комплаенса и аудит через автономный Финансовый совет с ежегодной отчетностью[cite: 27, 30]." },
+      "q7": { "question": "Как ассоциация внедряет технологии в госуслуги?", "answer": "Мы следуем Закону о цифровом правительстве для цифровизации услуг и применения ИИ и блокчейна[cite: 10]." }
+    },
+    "form": {
+      "title": "Не нашли нужную помощь?",
+      "fields": {
+        "name": "Имя",
+        "email": "Электронная почта",
+        "subject": "Тема",
+        "message": "Введите свое сообщение здесь.",
+        "submit": "Отправить"
+      }
+    }
   }
 }
