Fix: Corrige chave de tradução do botão do ecossistema

--- a/src/locales/langs/pt/common.json
+++ b/src/locales/langs/pt/common.json
@@ -5,7 +5,7 @@
     "subtitle": "A ponte definitiva entre o Mundo Físico e o Ecossistema Mundo Digital.",
     "description": "A ASPPIBRA-DAO integra conformidade jurídica, Blockchain e IA para converter propriedades físicas em ativos de alta eficiência operacional e liquidez, administrados de forma descentralizada com total segurança institucional.",
     "buttons": {
-      "access": "Ecossistema",
+      "ecosystem": "Ecossistema",
       "whitepaper": "Whitepaper"
     }
   },
